# reqtangle

./: Cargo.toml  README.md
reqcheck/: Cargo.toml
reqgather/: Cargo.toml  README.md
src/: gather.rs  main.rs
src/doc/: check.md  gather.md
tests/: cli.rs
