[package]
name = "reqtangle"
version = "0.1.0"
authors = ["Erich Schroeter <erich.schroeter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://reqtangle.com"
repository = "https://github.com/erichschroeter/reqtangle"
description = """
Reqtangle, a requirement manager utility.
"""

[dependencies]
